update mail config

--- a/SpringBoot-Email/src/main/resources/application.properties
+++ b/SpringBoot-Email/src/main/resources/application.properties
@@ -1,9 +1,14 @@
+
+server.port=8888
+spring.application.name=springboot-mail
+
 spring.mail.host = smtp.mxhichina.com
-spring.mail.username = 
-spring.mail.password = 
+spring.mail.username = 邮箱
+spring.mail.password = 邮箱密码
 spring.mail.protocol = smtp
 spring.mail.port = 465
 spring.mail.default-encoding = UTF-8
+#以下代码绕过25端口使用 使用465端口发送邮件 因为阿里云Ecs服务器默认管理25端口,会导致邮件发送失败
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 3000
 spring.mail.properties.mail.smtp.writetimeout = 5000
@@ -13,3 +18,5 @@ spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+
+mail.sendToMails = lei.tl@bitsun-inc.com
