--- a/springboot-email/pom.xml
+++ b/springboot-email/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.wengzi</groupId>
-    <artifactId>boot-mail</artifactId>
+    <artifactId>springboot-email</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
