springboot jsr303入参校验

--- a/springboot-validation/pom.xml
+++ b/springboot-validation/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.wengzi</groupId>
-    <artifactId>JSR-303</artifactId>
+    <groupId>qx.leizige</groupId>
+    <artifactId>springboot-validation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
