--- a/springboot-swagger2/pom.xml
+++ b/springboot-swagger2/pom.xml
@@ -5,12 +5,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.wengzi</groupId>
-    <artifactId>boot-test</artifactId>
+    <artifactId>springboot-swagger2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
+        <version>2.0.2.RELEASE</version>
     </parent>
 
     <properties>
@@ -23,9 +36,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--Swagger2依赖-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
         </dependency>
 
         <dependency>
@@ -33,5 +53,6 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
