--- a/springboot-mybatis-plus/pom.xml
+++ b/springboot-mybatis-plus/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>mybatis-plus</groupId>
-    <artifactId>boot-mp</artifactId>
+    <groupId>qx.leizige</groupId>
+    <artifactId>springboot-mybatis-plus</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -30,10 +30,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.1.0</version>
+            <version>3.4.3.1</version>
         </dependency>
 
         <dependency>
