--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>springboot</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springboot-easyexcel</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
