--- a/springboot-spring-retry/pom.xml
+++ b/springboot-spring-retry/pom.xml
@@ -2,15 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <artifactId>springboot</artifactId>
+        <groupId>qx.leizige</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <groupId>qx.leizige</groupId>
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>springboot-spring-retry</artifactId>
     <version>1.0-SNAPSHOT</version>
 
