--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,27 @@
     <artifactId>springboot</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-parent</artifactId>
+        <version>2.3.0.RELEASE</version>
+    </parent>
+
     <modules>
-        <!-- -->
+        <module>springboot-cache</module>
+        <module>springboot-easyexcel</module>
+        <module>springboot-elasticsearch</module>
+        <module>springboot-email</module>
+        <module>springboot-event</module>
+        <module>springboot-guava-eventbus</module>
+        <module>springboot-mybatis</module>
+        <module>springboot-mybatis-plus</module>
+        <module>springboot-redis</module>
+        <module>springboot-spel</module>
+        <module>springboot-spring-retry</module>
+        <module>springboot-swagger2</module>
+        <module>springboot-validation</module>
     </modules>
 
     <properties>
