--- a/springboot-easyexcel/pom.xml
+++ b/springboot-easyexcel/pom.xml
@@ -4,14 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <artifactId>springboot</artifactId>
+        <groupId>qx.leizige</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>qx.leizige</groupId>
     <artifactId>springboot-easyexcel</artifactId>
 
     <properties>
