--- a/springboot-event/pom.xml
+++ b/springboot-event/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>qx.leizige</groupId>
-    <artifactId>springboot-event</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <parent>
-        <artifactId>spring-boot-starter-validation</artifactId>
-        <groupId>org.springframework.boot</groupId>
-        <version>2.2.4.RELEASE</version>
+        <artifactId>springboot</artifactId>
+        <groupId>qx.leizige</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>springboot-event</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
