--- a/springboot-redis/pom.xml
+++ b/springboot-redis/pom.xml
@@ -8,13 +8,11 @@
     <artifactId>SpringBoot-Redis</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <artifactId>springboot</artifactId>
+        <groupId>qx.leizige</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-
     <properties>
         <encoding>utf-8</encoding>
         <java.version>1.8</java.version>
