--- a/springboot-swagger2/pom.xml
+++ b/springboot-swagger2/pom.xml
@@ -8,11 +8,10 @@
     <artifactId>springboot-swagger2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <artifactId>springboot</artifactId>
+        <groupId>qx.leizige</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
