--- a/springboot-event/pom.xml
+++ b/springboot-event/pom.xml
@@ -38,5 +38,9 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+		</dependency>
+	</dependencies>
 </project>
