freemarker通过模版生成类

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>springboot-spring-retry</module>
         <module>springboot-swagger2</module>
         <module>springboot-validation</module>
+        <module>springboot-freemarker</module>
     </modules>
 
     <properties>
