--- a/springboot-redis/src/test/resources/application.yml
+++ b/springboot-redis/src/test/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   redis:
     database: 0 # Redis数据库索引（默认为0）
-    host: localhost # Redis服务器地址
-    port: 6379
+    host: 192.168.2.103 # Redis服务器地址
+    port: 6371
     password: # Redis服务器连接密码（默认为空）
     jedis:
       pool:
