--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>springboot-swagger2</module>
         <module>springboot-validation</module>
         <module>springboot-freemarker</module>
+        <module>springboot-apache-dubbo-2.X</module>
     </modules>
 
     <properties>
