--- a/springboot-apache-dubbo/order-api/pom.xml
+++ b/springboot-apache-dubbo/order-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>qx.leizige</groupId>
-        <artifactId>X</artifactId>
+        <artifactId>springboot-apache-dubbo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
