--- a/springboot-apache-dubbo/pom.xml
+++ b/springboot-apache-dubbo/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>X</artifactId>
+    <artifactId>springboot-apache-dubbo</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>order-service</module>
