--- a/springboot-apache-dubbo/pom.xml
+++ b/springboot-apache-dubbo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>qx.leizige</groupId>
-        <artifactId>springboot</artifactId>
+        <artifactId>springboot-examples</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
