--- a/springboot-guava-eventbus/pom.xml
+++ b/springboot-guava-eventbus/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>springboot</artifactId>
+		<artifactId>springboot-examples</artifactId>
 		<groupId>qx.leizige</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
