--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -3,7 +3,7 @@
 
 
     <parent>
-        <artifactId>springboot</artifactId>
+        <artifactId>springboot-examples</artifactId>
         <groupId>qx.leizige</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
