add springboot xxl-job module

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>springboot-freemarker</module>
         <module>springboot-apache-dubbo</module>
         <module>springboot-apollo</module>
+        <module>springboot-xxl-job</module>
     </modules>
 
     <properties>
