--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>springboot-apollo</module>
         <module>springboot-xxl-job</module>
         <module>springboot-async</module>
+        <module>springboot-mongo</module>
     </modules>
 
     <properties>
